# mempalace-rs

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs
hooks/: mempal_precompact_hook.sh  mempal_save_hook.sh
scripts/: install.ps1  install.sh
src/: benchmarks.rs  cli.rs  config.rs  convo_miner.rs  db.rs  dialect.rs  embedder.rs  gain.rs  general_extractor.rs  install.rs  knowledge_graph.rs  layers.rs  lib.rs  main.rs  mcp_server.rs  miner.rs  normalize.rs  onboarding.rs  palace.rs  palace_graph.rs  preference.rs  ranker.rs  room_detector.rs  searcher.rs  split.rs  store.rs  usage.rs
tests/: coding_agent_eval.rs  gain.rs  test_benchmarks.rs  test_coding_agent_memory.rs  test_config.rs  test_install.rs  test_knowledge_graph.rs  test_mcp_server.rs  test_miner.rs  test_normalize.rs  test_store.rs
tools/beam-convert/: Cargo.toml
tools/beam-convert/src/: main.rs  py_literal.rs
