[package]
name = "mempalace"
version = "3.0.0"
edition = "2021"
description = "Local memory palace for AI assistants — Rust edition"
license = "MIT"

[[bin]]
name = "mempalace"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "mempalace"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
# CLI (optional — only needed for the binary)
clap = { version = "4", features = ["derive"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database — bundled SQLite, no system dep
rusqlite = { version = "0.32", features = ["bundled"] }

# Embeddings — ONNX Runtime, all-MiniLM-L6-v2, lazy init
fastembed = "4"

# Error handling
anyhow = "1"
thiserror = "2"

# Gitignore-aware file walking (same engine as ripgrep)
ignore = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing for deterministic IDs
blake3 = "1"

# Cross-platform config/data dirs (~/.mempalace)
directories = "5"

# Regex for general_extractor
regex = "1"

# Lazy static (for compiled regexes)
once_cell = "1"

[dev-dependencies]
tempfile = "3"
