[package]
name = "beam-convert"
version = "0.1.0"
edition = "2021"
publish = false
description = "Convert BEAM parquet shards (Mohammadta/BEAM) into the canonical JSONL consumed by mempalace-bench."

[[bin]]
name = "beam-convert"
path = "src/main.rs"

[dependencies]
anyhow = "1"
parquet = { version = "58", default-features = false, features = ["snap", "lz4", "zstd", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
